# speakeasy-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/actix3/: Cargo.toml
examples/actix3/src/: main.rs
examples/actix4/: Cargo.toml
examples/actix4/src/: main.rs
examples/axum/: Cargo.toml
examples/axum/src/: main.rs
src/: actix3_integration_test.rs  async_runtime.rs  body_mask.rs  controller.rs  generic_http.rs  har_builder.rs  lib.rs  masking.rs  middleware.rs  path_hint.rs  sdk.rs  speakeasy_protos.rs  transport.rs  util.rs
src/masking/: body_mask.rs  fields.rs  generic_mask.rs  option.rs
src/middleware/: actix3.rs  actix4.rs  axum.rs  controller.rs  host_extract.rs  messages.rs  request_id.rs
src/middleware/actix3/: request.rs  request_response_impl.rs  response.rs
src/middleware/actix4/: request.rs  request_response_impl.rs  response.rs
src/middleware/axum/: request.rs  request_response_impl.rs  response.rs
src/speakeasy_protos/: embedaccesstoken.rs  ingest.rs
src/speakeasy_protos/tokio02/: embed_access_token_client.rs  ingest_service_client.rs
tests/test_server/: Cargo.toml
tests/test_server/src/: main.rs
tests/testdata/: captures_basic_request_and_no_response_body_output.json  captures_basic_request_and_response_output.json  captures_basic_request_and_response_with_different_content_types_output.json  captures_basic_request_with_nano_precision_output.json  captures_cookies_output.json  captures_masked_request_response_output.json  captures_no_response_body_when_not_modified_output.json  captures_post_request_with_body_output.json  captures_query_params_output.json  captures_redirect_output.json  drops_request_and_response_bodies_when_request_body_too_large_output.json  drops_response_body_when_too_large_output.json
testserver/: .gitignore  Cargo.toml  README.md
testserver/src/: main.rs  test.rs
testserver/testdata/: captures_basic_request_and_no_response_body_input.json  captures_basic_request_and_no_response_body_output.json  captures_basic_request_and_response_input.json  captures_basic_request_and_response_output.json  captures_basic_request_and_response_with_different_content_types_input.json  captures_basic_request_and_response_with_different_content_types_output.json  captures_basic_request_and_response_with_no_response_header_set_input.json  captures_basic_request_and_response_with_no_response_header_set_output.json  captures_basic_request_and_response_with_repeat_headers_input.json  captures_basic_request_and_response_with_repeat_headers_output.json  captures_basic_request_with_nano_precision_input.json  captures_basic_request_with_nano_precision_output.json  captures_cookies_input.json  captures_cookies_output.json  captures_masked_request_response_input.json  captures_masked_request_response_output.json  captures_no_response_body_when_not_modified_input.json  captures_no_response_body_when_not_modified_output.json  captures_post_request_with_body_input.json  captures_post_request_with_body_output.json  captures_query_params_input.json  captures_query_params_output.json  captures_redirect_input.json  captures_redirect_output.json  drops_request_and_response_bodies_when_request_body_too_large_input.json  drops_request_and_response_bodies_when_request_body_too_large_output.json  drops_response_body_when_too_large_input.json  drops_response_body_when_too_large_output.json
testserver/testresults/: captures_basic_request_and_no_response_body.har  captures_basic_request_and_response.har  captures_basic_request_and_response_with_different_content_types.har  captures_basic_request_and_response_with_no_response_header_set.har  captures_basic_request_with_nano_precision.har  captures_cookies.har  captures_masked_request_response.har  captures_no_response_body_when_not_modified.har  captures_post_request_with_body.har  captures_query_params.har  captures_redirect.har  drops_request_and_response_bodies_when_request_body_too_large.har  drops_response_body_when_too_large.har
