[package]
edition = "2021"
name = "speakeasy-rust-sdk"
version = "0.1.0"

[features]

actix3 = [
  "dep:actix3",
  "dep:actix-service1",
  "dep:actix-http2",
  "dep:futures",
  "dep:pin-project",
  "dep:speakeasy-protos",
  "dep:hyper",
  "dep:tower",
  "tokio02",
]

tokio02 = [
  "dep:tokio02",
  "dep:tonic03",
  "dep:prost",
  "dep:hyper-openssl",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# error handling
thiserror = "1.0"

# utils
bytes = "1.2.1"
chrono = {version = "0.4.22", default-features = false, features = ["alloc", "std", "clock"]}
har = "0.7.1"
once_cell = "1.14.0"
regex = "1.6.0"
uuid = {version = "1.1.2", features = ["v4", "fast-rng"]}

# serialization / deserialization
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

# logging
log = "0.4.17"
url = "2.3.1"

# http
http = "0.2.8"
mime = "0.3.16"

## web frameworks middleware

# actix 3
actix-http2 = {package = "actix-http", version = "2", optional = true}
actix-service1 = {package = "actix-service", version = "1", optional = true}
actix3 = {package = "actix-web", version = "3", optional = true}
tokio02 = {package = "tokio", version = "0.2", features = ["sync", "rt-core"], optional = true}

# grpc actix3 compat
hyper = {version = "0.13.4", features = ["stream"], optional = true}
hyper-openssl = {version = "0.8.0", optional = true}
prost = {version = "0.6", optional = true}
tonic03 = {package = "tonic", version = "0.3", features = ["transport", "prost", "tls"], optional = true}
tower = {version = "0.3", optional = true}

# async
futures = {version = "0.3", optional = true}
pin-project = {version = "1", optional = true}

# protos
speakeasy-protos = {path = "../speakeasy-schemas/grpc/rust/lib", optional = true}# TODO: publish to crates and use that

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3"
