[package]
description = "Rust SDK for interacting with the Speakeasy Api platform"
documentation = "https://docs.rs/speakeasy-rust-sdk"
edition = "2021"
homepage = "https://www.speakeasyapi.dev"
license-file = "LICENSE"
name = "speakeasy-rust-sdk"
repository = "https://github.com/speakeasy-api/speakeasy-rust-sdk"
version = "0.1.1"

exclude = [
  "testserver",
  "/.*",
]

[package.metadata.docs.rs]
# features = ["feature1", "feature2"]
# all-features = true

[features]
# TODO: delete
default = ["axum", "tokio"]

axum = [
  "dep:axum",
  "dep:futures",
  "tokio",
]

actix3 = [
  "dep:actix3",
  "dep:actix-service1",
  "dep:actix-http2",
  "dep:futures",
  "dep:pin-project",
  "dep:hyper13",
  "dep:tower03",
  "tokio02",
]

tokio = [
  "dep:tokio",
  "dep:tonic",
  "dep:tower",
  "dep:hyper",
  "dep:hyper-openssl",
  "dep:speakeasy-protos-tokio-latest",
]

tokio02 = [
  "dep:tokio02",
  "dep:tonic03",
  "dep:speakeasy-protos-tokio-02",
  "dep:hyper-openssl08",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# error handling
thiserror = "1.0"

# utils
bytes = "1.2.1"
chrono = {version = "0.4.22", default-features = false, features = ["alloc", "std", "clock"]}
har = "0.7.1"
once_cell = "1.14.0"
regex = "1.6.0"
uuid = {version = "1.1.2", features = ["v4", "fast-rng"]}

# serialization / deserialization
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

# logging
log = "0.4.17"
url = "2.3.1"

# http
http = "0.2.8"
mime = "0.3.16"

## web frameworks middleware

# axum
axum = {version = "0.5", optional = true}

# latest deps
hyper = {version = "0.14", optional = true}
hyper-openssl = {version = "0.9", optional = true}
speakeasy-protos-tokio-latest = {version = "0.1.0", optional = true}
tokio = {version = "1.21", features = ["sync"], optional = true}
tonic = {version = "0.8", features = ["transport", "tls"], optional = true}
tower = {version = "0.4", optional = true}

# actix 3
actix-http2 = {package = "actix-http", version = "2", optional = true}
actix-service1 = {package = "actix-service", version = "1", optional = true}
actix3 = {package = "actix-web", version = "3", optional = true}
tokio02 = {package = "tokio", version = "0.2", features = ["sync", "rt-core"], optional = true}

# grpc actix3 compat
hyper-openssl08 = {package = "hyper-openssl", version = "0.8.0", optional = true}
hyper13 = {package = "hyper", version = "0.13.4", features = ["stream"], optional = true}
speakeasy-protos-tokio-02 = {version = "0.1.0", optional = true}
tonic03 = {package = "tonic", version = "0.3", features = ["transport", "tls"], optional = true}
tower03 = {package = "tower", version = "0.3", optional = true}

# async
futures = {version = "0.3", optional = true}
pin-project = {version = "1", optional = true}

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3"
