[package]
edition = "2021"
name = "test_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# speakeasy sdk
speakeasy-rust-sdk = {path = "../", features = ["actix3"]}

# actix
actix-service = {version = "1"}
actix-web = {package = "actix-web", version = "3"}

# utils
env_logger = "0.9"
futures-util = {version = "0.3.17", default-features = false, features = ["std"]}
har = "0.7.1"
itertools = "0.10.5"
log = "0.4"
once_cell = "1.15.0"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
time = "0.2"

[dev-dependencies]
actix-rt = "1"
pretty_assertions = "1"
