[package]
edition = "2021"
name = "actix3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# speakeasy sdk
speakeasy-rust-sdk = {path = "../..", features = ["actix3"]}

# actix
actix-service = {version = "1"}
actix-web = {package = "actix-web", version = "3"}

# utils
env_logger = "0.9"
futures-util = {version = "0.3.17", default-features = false, features = ["std"]}
log = "0.4"

# json
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"

# openapi spec generation
paperclip = {version = "0.6", features = ["actix3", "v3"]}
