[package]
edition = "2021"
name = "axum"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# speakeasy sdk
speakeasy-rust-sdk = {path = "../..", features = ["axum"]}

# axum
axum = {version = "0.6", features = []}

# tokio
tokio = {version = "1.0", features = ["full"]}

# utils
futures-util = {version = "0.3.17", default-features = false, features = ["std"]}

# json
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
